터미널까지 완벽 구현 완료